# rusty-beam

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIRECTORY_STRUCTURE.md  DOCKER.md  DOCKER_DEPLOYMENT.md  DYNAMIC_PLUGINS.md  Dockerfile  Dockerfile.comparison  Dockerfile.optimized  LICENSE  PIPELINE-ARCHITECTURE.md  PLUGIN_TESTING.md  PROGRESS.md  README.md  TESTING_SUMMARY.md  TODO.md  build-and-push.sh  build-debian-package.sh  build-packages.sh  build-plugins.sh  check-oauth-env.sh  config.html  debug-test.hurl  debug_auth.rs  docker-compose.yml  docker-entrypoint.sh  fix_plugin_configs.py  graceful-bind-test.hurl  id-selector-test.hurl  minimal-selector-test.hurl  minimal-test.hurl  railway.json  run-tests.sh  run_all_tests.sh  run_guestbook_oauth2.sh  run_hurl_tests.sh  (+23 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  initialize.sh  on-create.sh  post-create.sh  post-start.sh  setup.sh  update-content.sh
.github/workflows/: release.yml
config/: config-0.2.0.html  config-test.html  config.html  guestbook-no-oauth.html  guestbook.html  javascript-example-config.html  redirect-rules.html  rustybeam-site.html  test-access-log.html  test-directory-clean.html  test-directory.html
crates/microdata-extract/: Cargo.toml  README.md
crates/microdata-extract/examples/: auth_test.rs  basic_usage.rs  debug_auth.rs  itemref_example.rs  test_simple_auth.rs
crates/microdata-extract/src/: error.rs  extractor.rs  item.rs  lib.rs  property.rs  value.rs
crates/microdata-extract/tests/: integration_tests.rs
debian/: README.Debian  changelog  config.html  control  debhelper-build-stamp  files  postinst  postrm  rules  rusty-beam.postrm.debhelper  rusty-beam.service  rusty-beam.substvars
docker/: .dockerignore  Dockerfile  Dockerfile.prebuilt  Dockerfile.railway  README.md  build.sh  config-example.html  config.html  docker-compose.yml  docker-entrypoint-ssh.sh  docker-entrypoint.sh
docs/: README.md  index.html
docs/AccessLogPlugin/: index.html
docs/Authorization/: index.html
docs/AuthorizationRule/: index.html
docs/AuthorizationRuleSet/: index.html
docs/GoogleOAuth2Config/: index.html
docs/HostConfig/: index.html
docs/JavaScriptEngineConfig/: index.html
docs/Pipeline/: index.html
docs/RedirectRule/: index.html
docs/ServerConfig/: index.html
docs/StreamItem/: index.html
docs/api/: range-selectors.md  resource-selectors.md
docs/auth/: authentication.md  authorization.md  index.html
docs/config/: index.html
docs/development/: TESTING.md  TODO.md
docs/examples/: basic-examples.md  multi-oauth-config.html
docs/guides/: deployment.html  distribution.md  getting-started.html  index.html  installation.html  performance.html  security.html  troubleshooting.html
docs/plugins/: architecture.md  authorization-plugin-development.md  index.html
docs/reference/: configuration.html
docs/schema/: index.html
docs/tutorials/: index.html
examples/: example-config.html  redirect-config.html  redirect-embedded-config.html  websocket-config.html
examples/example-com/: foo.html  index.html
examples/files/: config.html
examples/guestbook/: README.md  index.html
examples/localhost/: index.html  test-list.html  test-websocket-broadcast.html  test-ws-normalization.html
files/: config.html  debug.html  foo.html  index.html  working-test.html  working-test.txt
files/extra/: extra.html
homebrew/: rusty-beam.rb
localhost/: test.html
localhost/auth/: users.html
plugins/access-log/: Cargo.toml
plugins/apache-access-log/: Cargo.toml
plugins/apache-error-log/: Cargo.toml
plugins/authorization/: Cargo.toml
plugins/basic-auth/: Cargo.toml
plugins/basic-auth/src/: lib.rs
plugins/compression/: Cargo.toml
plugins/config-reload/: Cargo.toml
plugins/config-reload/src/: lib.rs
plugins/cors/: Cargo.toml
plugins/directory/: Cargo.toml
plugins/directory/src/: lib.rs
plugins/error-handler/: Cargo.toml
plugins/file-authz/: Cargo.toml
plugins/file-handler/: Cargo.toml
plugins/google-oauth2/: Cargo.toml
plugins/google-oauth2/src/: lib.rs
plugins/health-check/: Cargo.toml
plugins/html-prettifier/: Cargo.toml
plugins/html-prettifier/src/: lib.rs
plugins/javascript-engine/: Cargo.toml
plugins/javascript-engine/src/: lib.rs
plugins/oauth2/: Cargo.toml
plugins/oauth2/src/: lib.rs
plugins/pipeline/: Cargo.toml
plugins/rate-limit/: Cargo.toml
plugins/redirect/: Cargo.toml
plugins/rusty-beam-plugin-api/: Cargo.toml
plugins/rusty-beam-plugin-api/src/: lib.rs
plugins/security-headers/: Cargo.toml
plugins/selector-handler/: Cargo.toml
plugins/selector-handler/src/: lib.rs
plugins/websocket/: Cargo.toml  README.md
plugins/websocket/src/: lib.rs
railway/: deploy-to-railway.md
scripts/: build-deb.sh  build-homebrew.sh  build-rpm.sh
src/: auth.rs  auth_integration_tests.rs  config.rs  constants.rs  handlers.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  utils.rs
src/plugins/: basic_auth.rs  dynamic.rs  google_oauth2.rs  mod.rs
src/v2/: config.rs  config_loader.rs  demo.rs  dynamic.rs  examples.rs  loader.rs  mod.rs  pipeline.rs  plugin.rs  wasm.rs
test-report/: index.html
test-report/store/: 16eff757-7890-4d2b-a7c6-b11199f88514-run.html  16eff757-7890-4d2b-a7c6-b11199f88514-source.html  16eff757-7890-4d2b-a7c6-b11199f88514-timeline.html  4bf2a466-abb4-4efd-b19e-5a643246d0e3-run.html  4bf2a466-abb4-4efd-b19e-5a643246d0e3-source.html  4bf2a466-abb4-4efd-b19e-5a643246d0e3-timeline.html  5894397c-bc20-4a9c-a10b-f849b516abaa-run.html  5894397c-bc20-4a9c-a10b-f849b516abaa-source.html  5894397c-bc20-4a9c-a10b-f849b516abaa-timeline.html  7afb2a9e-2d77-4727-b2fc-3bcf89810e35-run.html  7afb2a9e-2d77-4727-b2fc-3bcf89810e35-source.html  7afb2a9e-2d77-4727-b2fc-3bcf89810e35-timeline.html  9b74c935-1721-4712-90ca-9890b4b2e21a-run.html  9b74c935-1721-4712-90ca-9890b4b2e21a-source.html  9b74c935-1721-4712-90ca-9890b4b2e21a-timeline.html  (+12 more)
tests/: MIGRATION_NOTES.md  README.md  run_integration_tests.sh  simple_test.rs
tests/config/: test-auth-config.html  (+5 more)
(+189 files in other folders)
