[package]
name = "rusty-beam"
version = "0.1.0"
edition = "2024"
authors = ["James A. Duncan <james@stance.global>"]
description = "An HTTP server that uses CSS selectors to manipulate HTML documents via Range headers"
license = "MIT"
repository = "https://github.com/jamesaduncan/rusty-beam"
keywords = ["http", "html", "css", "selector", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# HTTP Server Framework
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
dom_query = "0.19"
urlencoding = "2.1"

# Authentication and cryptography
bcrypt = "0.15"
base64 = "0.22"
async-trait = "0.1"

# OAuth2 and HTTP client
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
rand = "0.8"

[dev-dependencies]
# For testing
hurl = "6.1.1"
tokio-test = "0.4"
tempfile = "3.8"


[profile.release]
# Optimizations for production builds
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "rusty-beam"
path = "src/main.rs"

[features]
default = []

# Optional features
tls = ["hyper-tls"]
metrics = ["prometheus"]
logging = ["tracing", "tracing-subscriber"]

# Optional dependencies for additional features
[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

# Metadata for cargo
[package.metadata.docs.rs]
features = ["tls", "metrics", "logging"]
rustdoc-args = ["--cfg", "docsrs"]
