[package]
name = "rusty-beam"
version = "0.1.0"
edition = "2024"
authors = ["James A. Duncan <james@stance.global>"]
description = "An HTTP server that uses CSS selectors to manipulate HTML documents via Range headers"
license = "MIT"
repository = "https://github.com/jamesaduncan/rusty-beam"
keywords = ["http", "html", "css", "selector", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# HTTP Server Framework
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
dom_query = "0.19"
urlencoding = "2.1"
regex = "1.10"
microdata-extract = { path = "crates/microdata-extract" }
rusty-beam-plugin-api = { path = "plugins/rusty-beam-plugin-api" }

# Plugin system
async-trait = "0.1"

# Dynamic library loading
libloading = "0.8"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

# Logging and time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# WASM runtime
wasmtime = "27.0"
wasmtime-wasi = "27.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2.4"

# Compression
flate2 = "1.0"

[dev-dependencies]
# For testing
hurl = "6.1.1"
tokio-test = "0.4"
tempfile = "3.8"


[profile.release]
# Optimizations for production builds
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "rusty-beam"
path = "src/main.rs"

[features]
default = []

# Optional features
tls = ["hyper-tls"]
metrics = ["prometheus"]
logging = ["tracing", "tracing-subscriber"]

# Optional dependencies for additional features
[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

# Metadata for cargo
[package.metadata.docs.rs]
features = ["tls", "metrics", "logging"]
rustdoc-args = ["--cfg", "docsrs"]

# Debian package configuration
[package.metadata.deb]
maintainer = "James A. Duncan <james@stance.global>"
copyright = "2024, James A. Duncan <james@stance.global>"
license-file = ["LICENSE", "4"]
extended-description = """\
Rusty-beam is an experimental HTTP server that serves files with CSS selector-based \
HTML manipulation via HTTP Range headers. It supports dynamic plugin authentication \
and authorization systems."""
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["target/release/rusty-beam", "usr/bin/", "755"],
    ["config/config.html", "etc/rusty-beam/", "644"],
    ["plugins/lib/*.so", "usr/lib/rusty-beam/plugins/", "644"],
    ["examples/localhost/**/*", "usr/share/rusty-beam/examples/localhost/", "644"],
    ["examples/files/**/*", "usr/share/rusty-beam/examples/files/", "644"],
    ["README.md", "usr/share/doc/rusty-beam/", "644"],
    ["LICENSE", "usr/share/doc/rusty-beam/", "644"],
]
conf-files = ["/etc/rusty-beam/config.html"]
maintainer-scripts = "build/debian/"
systemd-units = { enable = false }

# RPM package configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rusty-beam", dest = "/usr/bin/rusty-beam", mode = "755" },
    { source = "config/config.html", dest = "/etc/rusty-beam/config.html", mode = "644", config = true },
    { source = "plugins/lib/", dest = "/usr/lib/rusty-beam/plugins/", mode = "644" },
    { source = "examples/localhost/", dest = "/usr/share/rusty-beam/examples/localhost/", mode = "644" },
    { source = "examples/files/", dest = "/usr/share/rusty-beam/examples/files/", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/rusty-beam/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/rusty-beam/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
systemd = "*"
