[workspace]
members = [
    ".",
    "crates/microdata-extract",
    "plugins/rusty-beam-plugin-api",
    "plugins/access-log",
    "plugins/authorization",
    "plugins/basic-auth",
    "plugins/compression",
    "plugins/config-reload",
    "plugins/cors",
    "plugins/directory",
    "plugins/error-handler",
    "plugins/file-handler",
    "plugins/html-prettifier",
    "plugins/oauth2",
    "plugins/health-check",
    "plugins/javascript-engine",
    "plugins/rate-limit",
    "plugins/redirect",
    "plugins/security-headers",
    "plugins/selector-handler",
    "plugins/websocket",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies that plugins commonly use
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.4"

[package]
name = "rusty-beam"
version = "0.3.1"
edition = "2024"
authors = ["James A. Duncan <james@stance.global>"]
description = "An HTTP server that uses CSS selectors to manipulate HTML documents via Range headers"
license = "Apache-2.0"
repository = "https://github.com/jamesaduncan/rusty-beam"
keywords = ["http", "html", "css", "selector", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# HTTP Server Framework
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
dom_query = "0.19"
urlencoding = "2.1"
regex = "1.10"
microdata-extract = { path = "crates/microdata-extract" }
rusty-beam-plugin-api = { path = "plugins/rusty-beam-plugin-api" }

# Plugin system
async-trait = "0.1"

# Dynamic library loading
libloading = "0.8"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

# Daemonization
daemonize = "0.5"

# Logging and time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
httpdate = "1.0"

# WASM runtime
wasmtime = "27.0"
wasmtime-wasi = "27.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2.4"

# Compression
flate2 = "1.0"

[dev-dependencies]
# For testing
hurl = "6.1.1"
tokio-test = "0.4"
tempfile = "3.8"
# WebSocket testing
tokio-tungstenite = "0.20"
futures-util = "0.3"
reqwest = "0.11"


[profile.release]
# Optimizations for production builds
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "rusty-beam"
path = "src/main.rs"

# [[bin]]
# name = "test-microdata"
# path = "test_microdata.rs"

# WebSocket tests that require a server to be running
[[test]]
name = "websocket-broadcast-tests"
path = "tests/plugins/test-websocket-broadcast.rs"
test = false  # Skip by default - run manually by isolated test runner

[features]
default = []

# Optional features
tls = ["hyper-tls"]
metrics = ["prometheus"]
logging = ["tracing", "tracing-subscriber"]

# Optional dependencies for additional features
[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

# Metadata for cargo
[package.metadata.docs.rs]
features = ["tls", "metrics", "logging"]
rustdoc-args = ["--cfg", "docsrs"]
