[package]
name = "microdata-extract"
version = "0.1.0"
edition = "2024"
authors = ["rusty-beam contributors"]
description = "Standards-compliant HTML microdata extraction library"
license = "MIT OR Apache-2.0"
keywords = ["html", "microdata", "schema", "parsing", "extraction"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
# HTML parsing
dom_query = "0.19"

# Error handling
thiserror = "1.0"

# URL validation
url = "2.0"

# Serialization support (optional)
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
# For testing
serde_json = "1.0"