[package]
name = "directory"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "directory"
crate-type = ["cdylib"]

[dependencies]
rusty-beam-plugin-api = { path = "../rusty-beam-plugin-api" }
async-trait = "0.1"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
microdata-extract = { path = "../../crates/microdata-extract" }
dom_query = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"