[package]
name = "google-oauth2-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# OAuth2 and HTTP client
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1.0", features = ["full"] }

# For C FFI
libc = "0.2"