[package]
name = "javascript-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "rusty_beam_javascript_engine"

[dependencies]
rusty-beam-plugin-api = { path = "../rusty-beam-plugin-api" }
async-trait = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
v8 = "130.0.2"
once_cell = "1.20"
anyhow = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"