[package]
name = "rusty-beam-oauth2"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_beam_oauth2"
crate-type = ["cdylib"]

[dependencies]
rusty-beam-plugin-api = { path = "../rusty-beam-plugin-api" }
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
cookie = "0.17"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"