[package]
name = "rusty-beam-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Plugin API for Rusty Beam HTTP server"
license = "MIT"

[dependencies]
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"