[package]
name = "rusty-beam-selector-handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty-beam-plugin-api = { path = "../rusty-beam-plugin-api" }
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dom_query = "0.19"
regex = "1.10"
urlencoding = "2.1"