[package]
name = "rusty-beam-websocket"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty-beam-plugin-api = { path = "../rusty-beam-plugin-api" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
base64 = "0.21"
sha1 = "0.10"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
dom_query = "0.19"
hyper-tungstenite = "0.11"

[build-dependencies]
cbindgen = "0.26"